# bdwgc_cvs_tracking

./: TODO_conversion_to_CMAKE
bdwgc/: .cproject  .project  CMakeLists.txt  Toolchain-MoSync.cmake  compile_mosync.bat  compile_mosync_nmake.bat  dbg_mlc.c  dyn_load.c  headers.c  link_lib.bat  malloc.c  misc.c  mkinstalldirs  os_dep.c  ptr_chck.c  typd_mlc.c
bdwgc/doc/: README.win
bdwgc/include/: gc.h  gc_cpp.h
bdwgc/include/private/: gc_priv.h
bdwgc/libatomic_ops-1.1/: mkinstalldirs
bdwgc/tests/: CMakeLists.txt  test.c
